# Olio-ohjelmointi

./: .gitignore  README.md
luento1/: CMakeLists.txt  main.cpp
luento2/: main.cpp  postilaatikko.cpp  postilaatikko.h
luento3/: a.cpp  a.h  b.cpp  b.h  main.cpp
luento4/: a.cpp  a.h  b.cpp  b.h  main.cpp
luento5/: luento5.pro  main.cpp  muistiosoitteet.cpp  vaihda_esim.cpp
luento6_gui/: ikkuna2.cpp  ikkuna2.h  ikkuna2.ui  luento6_gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
luento6_signaalit/: luento6_signaalit.pro  main.cpp  qtolio.h
luento7/: lomake2.cpp  lomake2.h  lomake2.ui  luento7.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko1tehtavat/: CMakeLists.txt  main.cpp  tehtava2.cpp  tehtava3.cpp
viikko2tehtavat/: game.cpp  game.h
viikko3tehtavat/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikko4tehtavat/: asunto.cpp  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
viikko5tehtavat/: asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
viikko5tehtavatBonus/: devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicedisplay.h  devicemouse.cpp  devicemouse.h  devicetouchpad.cpp  devicetouchpad.h  main.cpp  mydeviceui.cpp  mydeviceui.h
viikko6tehtavat1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko6tehtavat2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko7tehtavat/: mainwindow.cpp  mainwindow.h  mainwindow.ui
